Remove deprecated files and modules from dependencies

--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,6 +1,10 @@
 [[redirects]]
 
-from = "/home/*"
-to = "https://perplexity-bd2d.onrender.com/api/v1/:splat"
+from = "/*"
+to = "/index.html"
 status = 200
 force = true
+
+
+
+
