--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@cashfreepayments/cashfree-sdk": "^0.1.7",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.1",
     "build": "^0.1.4",
+    "framer-motion": "^12.5.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
