--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.1",
     "build": "^0.1.4",
+    "fetch": "^1.1.0",
     "framer-motion": "^12.5.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
