--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "build": "^0.1.4",
     "fetch": "^1.1.0",
     "framer-motion": "^12.5.0",
+    "jwt-decode": "^4.0.0",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
