--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.4",
     "build": "^0.1.4",
+    "cashfree-pg": "^5.0.3",
     "fetch": "^1.1.0",
     "framer-motion": "^12.5.0",
     "jwt-decode": "^4.0.0",
