--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "cashfree": "^1.0.1",
     "cashfree-pg": "^5.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,7 +25,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
+    "nodejs": "^0.0.0",
     "nodemailer": "^6.10.0",
-    "razorpay": "^2.9.6"
+    "razorpay": "^2.9.6",
+    "sdk": "^0.1.1"
   }
 }
