Add shortid dependency and import in user controller

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -27,7 +27,7 @@
     "nodejs": "^0.0.0",
     "nodemailer": "^6.10.0",
     "razorpay": "^2.9.6",
-    "sdk": "^0.1.1"
- }
+    "sdk": "^0.1.1",
+    "shortid": "^2.2.17"
+  }
 }
-
