--- a/Backend/package.json
+++ b/Backend/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodejs": "^0.0.0",
     "nodemailer": "^6.10.0",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "sdk": "^0.1.1",
     "shortid": "^2.2.17"
