--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,15 +17,16 @@
     "axios": "^1.8.4",
     "build": "^0.1.4",
     "cashfree-pg": "^5.0.3",
+    "copy-to-clipboard": "^3.3.3",
     "fetch": "^1.1.0",
     "framer-motion": "^12.5.0",
     "jwt-decode": "^4.0.0",
     "numeral": "^2.0.6",
     "qrcode.react": "^4.2.0",
     "razorpay": "^2.9.6",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
     "react-modal": "^3.16.3",
